--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -2,7 +2,7 @@
   <div class="px-6 pt-4 mb-5 bg-white border-0 shadow-lg sm:rounded-3xl">
 
     <div class="flex items-center justify-between">
-      <mat-form-field>
+      <mat-form-field class="w-100">
         <mat-label>CURP: </mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="RACW050729MMCSHNA2" #input>
       </mat-form-field>
@@ -110,7 +110,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openDialog(row.id)" class="cursor-pointer"></tr>
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
