Refactor login component structure and routing; update dependencies and remove unused files (#16)
* Mejorar la funcionalidad de captura de fotos y actualizar el diseño de la interfaz de usuario (#3)

* Ajustes a version y autoupdate

* Se quita la consola y las opciones del menu en la aplicacion de electron

* Avance BD

* Agregar componentes de menú y pie de página, y crear página de consulta

* Agregar componente de detalle y mejorar la tabla de consulta con paginación y filtrado

* Commit necesario

* Avance

* Se agrega el cerrar sesion

* c

* Agregar servicio y componentes para la gestión de datos de Jalisco, actualizar la configuración del entorno y mejorar la interacción entre componentes en la página de inicio.

* Inserta los codigos postales en la base de datos

* SeSe agregan metodos para consultar los codigos postales

* Agregar servicio para consultar códigos postales, mejorar la gestión de datos de Jalisco y optimizar la sincronización de la base de datos.

* check

* Se agregan metodos para modalidades

* Se agrega metodo para consultar las colonias

* Se agrega metodo para consultar las colonias

* Abre consola

* Funciones de aspirantes a beneficio

* Se agregan metodos para usuarios

* Se agregan servicios para aspirantes de beneficio

* Se crean metodos para las fotos de aspirantes a beneficio

* Filtra por cp

* Ajustes en el formulario de Datos Generales: se aumenta el tamaño del título, se agrega campo de fecha de nacimiento y se mejora la estructura de los campos de entrada.

* Actualiza configuración de fecha y mejora formulario de Datos Generales: se agrega campo de fecha de nacimiento, se ajustan validaciones y se optimizan consultas SQL.

* check

* Pa´que retozen

* Se agregan sync y consulta remota de aspirantes

* Se agregan sync y consulta remota de aspirantes

* Se agrega metodo que te regresa el ultimo ID

* Refactor formulario de Datos Generales: se renombraron campos para seguir convenciones, se mejoraron validaciones y se agregó m

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -7,11 +7,9 @@
 
       <div x-show="open" click.away="open = false"
         class="mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 px-2 py-2 *:text-end">
-        <a (click)="menuShow = false" routerLink="/configuraciones" routerLinkActive="bg-[#f26507]/50"
-          class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-md">Configuraciones</a>
-        <a (click)="menuShow = false" routerLink="/registro" routerLinkActive="bg-[#f26507]/50"
+        <a (click)="menuShow = false" routerLink="/inicio/registro" routerLinkActive="bg-[#f26507]/50"
           class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-md">Registro</a>
-        <a (click)="menuShow = false" routerLink="/consulta" routerLinkActive="bg-[#f26507]/50"
+        <a (click)="menuShow = false" routerLink="/inicio/consulta" routerLinkActive="bg-[#f26507]/50"
           class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 rounded-md">Consulta</a>
         <a (click)="cerrarSesion()" routerLinkActive="bg-[#f26507]/50"
           class="block px-4 py-2 text-sm text-red-500 hover:bg-red-100 rounded-md">Cerrar Sesión</a>
