--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -31,7 +31,7 @@
       <div class="flex flex-row gap-2">
         <mat-form-field class="basis-2/3">
           <mat-label>Nombre Completo: </mat-label>
-          <input matInput formControlName="nombre_completo" maxlength="200" (input)="toUpperCaseName($event)">
+          <input matInput formControlName="nombre_completo" maxlength="200" (keydown)="toUpperCaseName($event)">
           <mat-error *ngIf="isValidField('nombre_completo')" class="text-red-500">
             {{ getFieldError("nombre_completo") }}
           </mat-error>
@@ -73,7 +73,7 @@
 
         <mat-form-field class="basis-1/4">
           <mat-label>Grado </mat-label>
-          <mat-select [(ngModel)]="grado" name="grado"
+          <mat-select [(ngModel)]="grado" formControlName="grado"
             (selectionChange)="getCarreras({id_grado: $event.value})"
             [disabled]="selectedValue != '6'">
             <mat-option *ngFor="let grado of grados" [value]="grado.nombre">
@@ -89,7 +89,7 @@
 
         <mat-form-field class="basis-1/4">
           <mat-label>Tipo Carrera </mat-label>
-          <mat-select [(ngModel)]="tipo_carrera" name="tipo_carrera"
+          <mat-select [(ngModel)]="tipo_carrera" formControlName="tipo_carrera"
             (selectionChange)="getCarreras({id_tipo: $event.value})"
             [disabled]="selectedValue != '6'">
             <mat-option *ngFor="let tipo_carrera of tipos_carreras" [value]="tipo_carrera.nombre">
@@ -124,7 +124,7 @@
 
         <mat-form-field class="basis-2/3">
           <mat-label>Municipio</mat-label>
-          <mat-select [(ngModel)]="municipio" name="municipio"
+          <mat-select [(ngModel)]="municipio" formControlName="municipio"
             (selectionChange)="getCodigosPostales({municipio: $event.value})">
             <mat-option *ngFor="let municipio of municipios" [value]="municipio.municipio">
               {{ municipio.municipio }}
