--- a/src/app/pages/consulta/dialog-aspirante-beneficio.html
+++ b/src/app/pages/consulta/dialog-aspirante-beneficio.html
@@ -6,11 +6,8 @@
   <!-- Sección de la imagen -->
   <div class="w-full flex justify-center">
     <div class="w-48 h-48 flex justify-center items-center">
-      <img
-        [src]="aspiranteBeneficio?.aspiranteBeneficioFoto || 'assets/default-profile.png'"
-        alt="Foto del aspirante"
-        class="w-full h-full rounded-lg shadow-lg object-cover border-2 border-gray-200"
-      />
+      <img [src]="aspiranteBeneficioFoto" alt="Foto del aspirante"
+        class="w-full h-full rounded-lg shadow-lg object-cover border-2 border-gray-200" />
     </div>
   </div>
 
