--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -9,7 +9,7 @@
 
         <mat-form-field class="basis-1/2 ">
           <mat-label>CURP: </mat-label>
-          <input formControlName="curp" matInput maxlength="18" (input)="toUpperCaseCurp($event)" >
+          <input formControlName="curp" matInput maxlength="18" (input)="toUpperCaseCurp($event)">
           <mat-error *ngIf="isValidField('curp')" class="text-red-500">
             {{ getFieldError("curp") }}
           </mat-error>
@@ -17,7 +17,7 @@
 
         <mat-form-field class="basis-1/2 ">
           <mat-label>Modalidad</mat-label>
-          <mat-select formControlName="id_modalidad" [(ngModel)]="selectedValue">
+          <mat-select formControlName="id_modalidad" (selectionChange)="selectedValue2()">
             <mat-option *ngFor="let modalidad of modalidades" [value]="modalidad.id">{{modalidad.nombre}}</mat-option>
           </mat-select>
           @if( isValidField('id_modalidad') ) {
@@ -31,7 +31,7 @@
       <div class="flex flex-row gap-2">
         <mat-form-field class="basis-2/3">
           <mat-label>Nombre Completo: </mat-label>
-          <input matInput formControlName="nombre_completo" maxlength="200" (keydown)="toUpperCaseName($event)">
+          <input matInput formControlName="nombre_completo" maxlength="200" (input)="toUpperCaseName($event)">
           <mat-error *ngIf="isValidField('nombre_completo')" class="text-red-500">
             {{ getFieldError("nombre_completo") }}
           </mat-error>
@@ -41,7 +41,7 @@
           <input matInput [matDatepicker]="picker" formControlName="fecha_nacimiento">
           <mat-hint>DD/MM/YYYY</mat-hint>
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker ></mat-datepicker>
+          <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
       </div>
 
@@ -73,9 +73,7 @@
 
         <mat-form-field class="basis-1/4">
           <mat-label>Grado </mat-label>
-          <mat-select [(ngModel)]="grado" formControlName="grado"
-            (selectionChange)="getCarreras({id_grado: $event.value})"
-            [disabled]="selectedValue != '6'">
+          <mat-select [(ngModel)]="grado" name="grado" (selectionChange)="getCarreras({id_grado: $event.value})">
             <mat-option *ngFor="let grado of grados" [value]="grado.nombre">
               {{ grado.nombre }}
             </mat-option>
@@ -89,9 +87,8 @@
 
         <mat-form-field class="basis-1/4">
           <mat-label>Tipo Carrera </mat-label>
-          <mat-select [(ngModel)]="tipo_carrera" formControlName="tipo_carrera"
-            (selectionChange)="getCarreras({id_tipo: $event.value})"
-            [disabled]="selectedValue != '6'">
+          <mat-select [(ngModel)]="tipo_carrera" name="tipo_carrera"
+            (selectionChange)="getCarreras({id_tipo: $event.value})">
             <mat-option *ngFor="let tipo_carrera of tipos_carreras" [value]="tipo_carrera.nombre">
               {{ tipo_carrera.nombre }}
             </mat-option>
@@ -105,7 +102,7 @@
 
         <mat-form-field class="basis-2/4">
           <mat-label>Carrera</mat-label>
-          <mat-select formControlName="carrera" [disabled]="selectedValue != '6'">
+          <mat-select formControlName="carrera">
             <mat-option *ngFor="let carrera of carreras" [value]="carrera.nombre">
               {{carrera.nombre}}</mat-option>
           </mat-select>
@@ -124,7 +121,7 @@
 
         <mat-form-field class="basis-2/3">
           <mat-label>Municipio</mat-label>
-          <mat-select [(ngModel)]="municipio" formControlName="municipio"
+          <mat-select [(ngModel)]="municipio" name="municipio"
             (selectionChange)="getCodigosPostales({municipio: $event.value})">
             <mat-option *ngFor="let municipio of municipios" [value]="municipio.municipio">
               {{ municipio.municipio }}
@@ -132,6 +129,7 @@
           </mat-select>
           @if( isValidField('municipio') ) {
           <mat-error class="text-red-500">
+
             {{ getFieldError("municipio") }}
           </mat-error>
           }
