--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -102,7 +102,7 @@
         <mat-form-field class="basis-2/4">
           <mat-label>Carrera</mat-label>
           <mat-select formControlName="carrera">
-            <mat-option *ngFor="let carrera of carreras" [value]="carrera.id">
+            <mat-option *ngFor="let carrera of carreras" [value]="carrera.nombre">
               {{ carrera.nombre }}
             </mat-option>
           </mat-select>
