--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -9,7 +9,7 @@
 
         <mat-form-field class="basis-1/2 ">
           <mat-label>CURP: </mat-label>
-          <input formControlName="curp" matInput maxlength="18" (input)="toUpperCaseCurp($event)" >
+          <input formControlName="curp" matInput maxlength="18" (input)="toUpperCaseCurp($event)">
           <mat-error *ngIf="isValidField('curp')" class="text-red-500">
             {{ getFieldError("curp") }}
           </mat-error>
@@ -17,7 +17,7 @@
 
         <mat-form-field class="basis-1/2 ">
           <mat-label>Modalidad</mat-label>
-          <mat-select formControlName="id_modalidad" [(ngModel)]="selectedValue">
+          <mat-select formControlName="id_modalidad" (selectionChange)="selectedValue2()">
             <mat-option *ngFor="let modalidad of modalidades" [value]="modalidad.id">{{modalidad.nombre}}</mat-option>
           </mat-select>
           @if( isValidField('id_modalidad') ) {
@@ -41,7 +41,7 @@
           <input matInput [matDatepicker]="picker" formControlName="fecha_nacimiento">
           <mat-hint>DD/MM/YYYY</mat-hint>
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker ></mat-datepicker>
+          <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
       </div>
 
@@ -73,47 +73,29 @@
 
         <mat-form-field class="basis-1/4">
           <mat-label>Grado </mat-label>
-          <mat-select [(ngModel)]="grado" name="grado"
-            (selectionChange)="getCarreras({id_grado: $event.value})"
-            [disabled]="selectedValue != '6'">
-            <mat-option *ngFor="let grado of grados" [value]="grado.nombre">
+          <mat-select [(ngModel)]="grado" formControlName="grado" (selectionChange)="onGradoChange($event.value)">
+            <mat-option *ngFor="let grado of grados" [value]="grado.id">
               {{ grado.nombre }}
             </mat-option>
           </mat-select>
-          <!-- @if( isValidField('grado') ) {
-          <mat-error class="text-red-500">
-            {{ getFieldError("grado") }}
-          </mat-error>
-          } -->
         </mat-form-field>
 
         <mat-form-field class="basis-1/4">
           <mat-label>Tipo Carrera </mat-label>
-          <mat-select [(ngModel)]="tipo_carrera" name="tipo_carrera"
-            (selectionChange)="getCarreras({id_tipo: $event.value})"
-            [disabled]="selectedValue != '6'">
-            <mat-option *ngFor="let tipo_carrera of tipos_carreras" [value]="tipo_carrera.nombre">
+          <mat-select [(ngModel)]="tipo_carrera" formControlName="tipo_carrera" (selectionChange)="onTipoCarreraChange($event.value)">
+            <mat-option *ngFor="let tipo_carrera of tipos_carreras" [value]="tipo_carrera.id">
               {{ tipo_carrera.nombre }}
             </mat-option>
           </mat-select>
-          <!-- @if( isValidField('tipo_carrera') ) {
-          <mat-error class="text-red-500">
-            {{ getFieldError("tipo_carrera") }}
-          </mat-error>
-          } -->
         </mat-form-field>
 
         <mat-form-field class="basis-2/4">
           <mat-label>Carrera</mat-label>
-          <mat-select formControlName="carrera" [disabled]="selectedValue != '6'">
+          <mat-select formControlName="carrera">
             <mat-option *ngFor="let carrera of carreras" [value]="carrera.nombre">
-              {{carrera.nombre}}</mat-option>
+              {{ carrera.nombre }}
+            </mat-option>
           </mat-select>
-          <!-- @if( isValidField('carrera') ) {
-            <mat-error class="text-red-500">
-              {{ getFieldError("carrera") }}
-            </mat-error>
-            } -->
         </mat-form-field>
 
       </div>
@@ -132,6 +114,7 @@
           </mat-select>
           @if( isValidField('municipio') ) {
           <mat-error class="text-red-500">
+
             {{ getFieldError("municipio") }}
           </mat-error>
           }
