--- a/src/app/pages/reportes/reportes.component.html
+++ b/src/app/pages/reportes/reportes.component.html
@@ -8,7 +8,7 @@
 </head>
 <body class="flex items-center justify-center h-screen bg-gray-100">
     <div class="text-center">
-        <p class="text-xl text-gray-600 mb-4 text-bold">CHECADOR ASISTENCIA</p>
+        <p class="text-xl text-gray-600 mb-4 text-bold">REPORTES</p>
         <div class="flex justify-center space-x-4">
             <img src="assets/img/obrero_sitio_construccion.png" alt="Obrero" class="w-170 h-140">
         </div>
