--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -102,14 +102,17 @@
             <div
               class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
 
+              @if (permisoAcciones) {
               <button mat-button color="primary">Editar</button>
               <button mat-button (click)="deleteAspiranteBeneficio(row.id)" color="accent">Eliminar</button>
+              }
             </div>
           </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openDialog(row.id)" class="cursor-pointer"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openDialog(row.id)"
+          class="cursor-pointer"></tr>
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
