Actualizar lógica de selección de carrera en DatosGeneralesComponent para usar IDs en lugar de nombres y agregar manejo de carrera.

--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -92,7 +92,7 @@
         <mat-form-field class="basis-2/4">
           <mat-label>Carrera</mat-label>
           <mat-select formControlName="carrera">
-            <mat-option *ngFor="let carrera of carreras" [value]="carrera.nombre">
+            <mat-option *ngFor="let carrera of carreras" [value]="carrera.id">
               {{ carrera.nombre }}
             </mat-option>
           </mat-select>
