--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -102,8 +102,9 @@
             <div
               class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
 
-              @if (permisoAcciones) {
-              <button mat-button color="primary">Editar</button>
+              @if (true) {
+              <button mat-button (click)="openDialog(row.id)" color="primary">Consultar</button>
+              <button mat-button color="primary" [routerLink]="['editar/', row.id]" >Editar</button>
               <button mat-button (click)="deleteAspiranteBeneficio(row.id)" color="accent">Eliminar</button>
               }
             </div>
@@ -111,7 +112,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openDialog(row.id)"
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" 
           class="cursor-pointer"></tr>
 
         <!-- Row shown when there is no matching data. -->
