--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -8,8 +8,10 @@
       </mat-form-field>
 
       <button
-        class="rounded-full w-[200px] h-[50px] flex items-center justify-center bg-blue-500 hover:bg-blue-600 text-sm text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
-        Buscar
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex justify-between items-center gap-2">
+        <span>
+          Consultar
+        </span>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
           class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc">
@@ -25,6 +27,12 @@
 
 
   <div class="px-6 py-5 bg-white border-0 shadow-lg sm:rounded-3xl">
+    <div class="flex justify-start items-center gap-5">
+      <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
+        (click)="downloadExcel()">Descargar XLSX</button>
+      <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
+        (click)="downloadPdf()">Descargar PDF</button>
+    </div>
 
     <div class="table-container mat-elevation-z8" style="background-color: white;">
       <table mat-table [dataSource]="dataSource" matSort>
@@ -98,11 +106,12 @@
         <!-- Acciones -->
         <ng-container matColumnDef="acciones">
           <th class="text-right" mat-header-cell *matHeaderCellDef> Acciones </th>
-          <td mat-cell *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" class="action-cell">
             <div
               class="flex justify-end items-center gap-2 *:flex *:justify-center *:items-center *:rounded-full *:p-2">
 
               @if (permisoAcciones) {
+              <button mat-button (click)="openDialog(row.id)" color="primary">Ver más</button>
               <button mat-button color="primary">Editar</button>
               <button mat-button (click)="deleteAspiranteBeneficio(row.id)" color="accent">Eliminar</button>
               }
@@ -111,7 +120,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openDialog(row.id)"
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClick($event, row.id)"
           class="cursor-pointer"></tr>
 
         <!-- Row shown when there is no matching data. -->
