--- a/src/app/pages/configuraciones/configuraciones.component.html
+++ b/src/app/pages/configuraciones/configuraciones.component.html
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitio en Construcción</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="flex items-center justify-center h-screen bg-gray-100">
-    <div class="text-center">
-        <p class="text-xl text-gray-600 mb-4 text-bold">CONFIGURACIONES</p>
-        <div class="flex justify-center space-x-4">
-            <img src="assets/img/obrero_sitio_construccion.png" alt="Obrero" class="w-170 h-140">
-        </div>
-    </div>
-</body>
-</html>
+<div class="bg-gray-100 flex justify-center items-center  h-screen container mx-auto p-0">
+  <div class="px-6 py-5 bg-white h-[80vh] w-[800px] border-0 shadow-lg sm:rounded-3xl">
+    <form [formGroup]="myForm" class="my-2 h-[100%]">
+      <div class="flex flex-col justify-between items-center h-[95%] gap-2">
+
+        <mat-form-field class="w-full" >
+          <mat-label>Modulos</mat-label>
+          <mat-select class="h-[30px] mat-mdc-select" formControlName="modulo" (selectionChange)="selectedValue_modulo()">
+            <mat-option *ngFor="let modulo of modulos" [value]="modulo.nombre">{{modulo.nombre}}</mat-option>
+          </mat-select>
+          @if( isValidField('modulo') ) {
+          <mat-error class="text-red-500">
+            {{ getFieldError("modulo") }}
+          </mat-error>
+          }
+        </mat-form-field>
+
+        <button (click)="onSubmit()"
+            class="rounded-full w-full flex flex-row justify-center items-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-device-floppy"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2" /><path d="M12 14m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M14 4l0 4l-6 0l0 -4" /></svg>
+            GUARDAR
+        </button>
+
+      </div>
+    </form>
+  </div>
+</div>
