--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -1,6 +1,11 @@
 <div class="bg-gray-100 p-0">
   <div class="px-6 py-5 bg-white border-0 shadow-lg sm:rounded-3xl">
 
+    <mat-card appearance="outlined" class="h-[30px] flex items-center justify-center" >
+      <mat-card-content><b>MODULO ACTUAL:  {{this.modulo_actual}}</b></mat-card-content>
+    </mat-card>
+    <p>{{modulo_actual}}</p>
+
     <!-- <h2 class="text-3xl">Datos Generales</h2> -->
 
     <form [formGroup]="myForm" class="my-2">
