--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -4,7 +4,7 @@
     <mat-card appearance="outlined" class="h-[30px] flex items-center justify-center" >
       <mat-card-content><b>MODULO ACTUAL:  {{this.modulo_actual}}</b></mat-card-content>
     </mat-card>
-    <p>{{modulo_actual}}</p>
+
 
     <!-- <h2 class="text-3xl">Datos Generales</h2> -->
 
@@ -125,8 +125,25 @@
           }
         </mat-form-field>
 
-
         <mat-form-field class="basis-1/3">
+          <mat-label>Codigo Postal</mat-label>
+          <input #input
+                 type="text"
+                 matInput
+                 [formControl]="myControl_cp"
+                 [matAutocomplete]="auto"
+                 (input)="filter()"
+                 (focus)="filter()">
+          <mat-autocomplete requireSelection #auto="matAutocomplete" (selectionChange)="getColoniasByCP()" >
+            <mat-option *ngFor="let cp of this.codigosPostales" [value]="cp.cp">{{cp.cp}}</mat-option>
+            <!-- @for (cp of codigosPostales; track cp) {
+              <mat-option [value]="cp.cp">{{cp.cp}}</mat-option>
+            } -->
+          </mat-autocomplete>
+        </mat-form-field>
+
+
+        <!-- <mat-form-field class="basis-1/3">
           <mat-label>Código Postal</mat-label>
           <mat-select formControlName="cp" (selectionChange)="getColoniasByCP()">
             <mat-option *ngFor="let cp of codigosPostales" [value]="cp.cp">{{cp.cp}}</mat-option>
@@ -134,7 +151,7 @@
           <mat-error *ngIf="isValidField('cp')" class="text-red-500">
             {{ getFieldError("cp") }}
           </mat-error>
-        </mat-form-field>
+        </mat-form-field> -->
 
       </div>
 
