--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -131,18 +131,10 @@
 
         <mat-form-field class="basis-1/3">
           <mat-label>Codigo Postal</mat-label>
-          <input #input
-                 type="text"
-                 matInput
-                 [formControl]="myControl_cp"
-                 [matAutocomplete]="auto"
-                 (input)="filter()"
-                 (focus)="filter()">
-          <mat-autocomplete requireSelection #auto="matAutocomplete" (selectionChange)="getColoniasByCP()" >
-            <mat-option *ngFor="let cp of this.codigosPostales" [value]="cp.cp">{{cp.cp}}</mat-option>
-            <!-- @for (cp of codigosPostales; track cp) {
-              <mat-option [value]="cp.cp">{{cp.cp}}</mat-option>
-            } -->
+          <input #input type="text" matInput [formControl]="myControl_cp" [matAutocomplete]="auto" (input)="filter()"
+            (focus)="filter()">
+          <mat-autocomplete requireSelection #auto="matAutocomplete" (selectionChange)="getColoniasByCP()">
+            <mat-option *ngFor="let option of filteredOptions" [value]="option.cp">{{option.cp}}</mat-option>
           </mat-autocomplete>
         </mat-form-field>
 
