--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -131,23 +131,13 @@
 
         <mat-form-field class="basis-1/3">
           <mat-label>Codigo Postal</mat-label>
-          <input #input type="text" matInput [formControl]="myControl_cp" [matAutocomplete]="auto" (input)="filter()"
+          <input #input type="text" matInput formControlName="cp" [matAutocomplete]="auto" (input)="filter()"
             (focus)="filter()">
-          <mat-autocomplete requireSelection #auto="matAutocomplete" (selectionChange)="getColoniasByCP()">
+          <mat-autocomplete requireSelection #auto="matAutocomplete" (optionSelected)="getColoniasByCP()">
             <mat-option *ngFor="let option of filteredOptions" [value]="option.cp">{{option.cp}}</mat-option>
           </mat-autocomplete>
         </mat-form-field>
 
-
-        <!-- <mat-form-field class="basis-1/3">
-          <mat-label>Código Postal</mat-label>
-          <mat-select formControlName="cp" (selectionChange)="getColoniasByCP()">
-            <mat-option *ngFor="let cp of codigosPostales" [value]="cp.cp">{{cp.cp}}</mat-option>
-          </mat-select>
-          <mat-error *ngIf="isValidField('cp')" class="text-red-500">
-            {{ getFieldError("cp") }}
-          </mat-error>
-        </mat-form-field> -->
 
       </div>
 
