--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -7,6 +7,9 @@
 
 
     <!-- <h2 class="text-3xl">Datos Generales</h2> -->
+    @if (editar) {
+    <h2 class="text-3xl">editar page</h2>
+    }
 
     <form [formGroup]="myForm" class="my-2">
 
@@ -87,7 +90,8 @@
 
         <mat-form-field class="basis-1/4">
           <mat-label>Tipo Carrera </mat-label>
-          <mat-select [(ngModel)]="tipo_carrera" formControlName="tipo_carrera" (selectionChange)="onTipoCarreraChange($event.value)">
+          <mat-select [(ngModel)]="tipo_carrera" formControlName="tipo_carrera"
+            (selectionChange)="onTipoCarreraChange($event.value)">
             <mat-option *ngFor="let tipo_carrera of tipos_carreras" [value]="tipo_carrera.id">
               {{ tipo_carrera.nombre }}
             </mat-option>
@@ -127,31 +131,13 @@
 
         <mat-form-field class="basis-1/3">
           <mat-label>Codigo Postal</mat-label>
-          <input #input
-                 type="text"
-                 matInput
-                 [formControl]="myControl_cp"
-                 [matAutocomplete]="auto"
-                 (input)="filter()"
-                 (focus)="filter()">
-          <mat-autocomplete requireSelection #auto="matAutocomplete" (selectionChange)="getColoniasByCP()" >
-            <mat-option *ngFor="let cp of this.codigosPostales" [value]="cp.cp">{{cp.cp}}</mat-option>
-            <!-- @for (cp of codigosPostales; track cp) {
-              <mat-option [value]="cp.cp">{{cp.cp}}</mat-option>
-            } -->
+          <input #input type="text" matInput formControlName="cp" [matAutocomplete]="auto" (input)="filter()"
+            (focus)="filter()">
+          <mat-autocomplete requireSelection #auto="matAutocomplete" (optionSelected)="getColoniasByCP()">
+            <mat-option *ngFor="let option of filteredOptions" [value]="option.cp">{{option.cp}}</mat-option>
           </mat-autocomplete>
         </mat-form-field>
 
-
-        <!-- <mat-form-field class="basis-1/3">
-          <mat-label>Código Postal</mat-label>
-          <mat-select formControlName="cp" (selectionChange)="getColoniasByCP()">
-            <mat-option *ngFor="let cp of codigosPostales" [value]="cp.cp">{{cp.cp}}</mat-option>
-          </mat-select>
-          <mat-error *ngIf="isValidField('cp')" class="text-red-500">
-            {{ getFieldError("cp") }}
-          </mat-error>
-        </mat-form-field> -->
 
       </div>
 
