se suben cambios en footer e imagenes que muestran el estado de la sincronizacion de aspben hacia tisa

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,10 +6,13 @@
     </p>
   </div>
   <div class="text-center">
+    <p style="text-align: left;">Versión: {{ version }}</p>
     <p>
       Copyright © {{ currentYear }} -
       <a class="font-semibold" target="_blank" href="https://tarjetasintegrales.mx/">Tarjetas Integrales S.A. de
         C.V.</a>
     </p>
   </div>
+
+
 </footer>
