--- a/src/app/pages/reportes/reportes.component.html
+++ b/src/app/pages/reportes/reportes.component.html
@@ -1,17 +1,88 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitio en Construcción</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="flex items-center justify-center h-screen bg-gray-100">
-    <div class="text-center">
-        <p class="text-xl text-gray-600 mb-4 text-bold">REPORTES</p>
-        <div class="flex justify-center space-x-4">
-            <img src="assets/img/obrero_sitio_construccion.png" alt="Obrero" class="w-170 h-140">
+<div class="container h-screen py-5 mx-auto">
+    <div class="px-6 pt-4 mb-5 bg-white border-0 shadow-lg sm:rounded-3xl">
+
+        <div class="flex items-center justify-between">
+            <form [formGroup]="formConsulta" class="flex items-center justify-between flex-wrap gap-2">
+                <mat-form-field>
+                    <mat-label>Reportes</mat-label>
+                    <mat-select formControlName="reporte">
+                        @for (reporte of reportes; track reporte) {
+                        <mat-option [value]="reporte.route">{{reporte.nombre}}</mat-option>
+                        }
+                    </mat-select>
+                </mat-form-field>
+
+                <mat-form-field>
+                    <mat-label>Fecha de registro</mat-label>
+                    <mat-date-range-input [rangePicker]="picker">
+                      <input matStartDate formControlName="fechaInicio" placeholder="Inicio">
+                      <input matEndDate formControlName="fechaFin" placeholder="Fin">
+                    </mat-date-range-input>
+                    <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                  </mat-form-field>
+            </form>
         </div>
+
     </div>
-</body>
-</html>
+
+    <div class="px-6 py-5 bg-white border-0 shadow-lg sm:rounded-3xl">
+        <div class="flex justify-between items-center">
+            <div class="flex justify-start items-center gap-5">
+                <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded"
+                    [disabled]="!generado || loading" (click)="downloadExcel()">Descargar XLSX</button>
+                <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"
+                    [disabled]="!generado || loading" (click)="downloadPdf()">Descargar PDF</button>
+            </div>
+
+            <div class="flex justify-start items-center gap-5">
+                <button (click)="getReporte()"
+                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex justify-between items-center gap-2">
+                    <span>
+                        Consultar
+                    </span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M3 12h12" />
+                        <path d="M11 8l4 4l-4 4" />
+                        <path d="M12 21a9 9 0 0 0 0 -18" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+
+        <div *ngIf="loading; else loaded">
+            <mat-spinner class="mx-auto my-5"></mat-spinner>
+        </div>
+
+        <ng-template #loaded>
+            <div class="table-container mat-elevation-z8" style="background-color: white;">
+                <table mat-table [dataSource]="dataSource" matSort>
+
+                    @for (column of displayedColumns; track column) {
+                    <ng-container [matColumnDef]="column">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+                        <td mat-cell *matCellDef="let row"> {{row[column]}} </td>
+                    </ng-container>
+                    }
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="cursor-pointer"></tr>
+
+                    <!-- Row shown when there is no matching data. -->
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell p-5" colspan="4">No hay coincidencias</td>
+                    </tr>
+                </table>
+            </div>
+
+            <mat-paginator [length]="total" [pageSize]="perPage" [pageIndex]="currentPage"
+                [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons (page)="onPaginateChange($event)">
+            </mat-paginator>
+        </ng-template>
+    </div>
+
+</div>
