Refactor synchronization logic and enhance footer component; update sync status handling

--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -2,7 +2,7 @@
   <div class="px-6 py-5 bg-white border-0 shadow-lg sm:rounded-3xl">
 
     <mat-card appearance="outlined" class="h-[30px] flex items-center justify-center" >
-      <mat-card-content><b>MODULO ACTUAL:  {{this.modulo_actual}}</b></mat-card-content>
+      <mat-card-content><b>MODULO ACTUAL:  {{modulo_actual}}</b></mat-card-content>
     </mat-card>
 
 
