--- a/src/app/pages/reportes/reportes.component.html
+++ b/src/app/pages/reportes/reportes.component.html
@@ -18,7 +18,7 @@
                       <input matStartDate formControlName="fechaInicio" placeholder="Inicio">
                       <input matEndDate formControlName="fechaFin" placeholder="Fin">
                     </mat-date-range-input>
-                    <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+                    <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-date-range-picker #picker></mat-date-range-picker>
                   </mat-form-field>
