--- a/src/app/pages/consulta/consulta.component.html
+++ b/src/app/pages/consulta/consulta.component.html
@@ -207,7 +207,7 @@
 
                 <button mat-button (click)="openDialog(row.id)" color="primary">Ver más</button>
                 @if (permisoAcciones) {
-                <button mat-button color="primary">Editar</button>
+                  <button mat-button color="primary" [routerLink]="['/inicio/editar/', row.id]" >Editar</button>
                 <button mat-button (click)="deleteAspiranteBeneficio(row.id)" color="accent">Eliminar</button>
                 }
               </div>
