Refactor postal code retrieval to streamline function calls and enhance async handling

--- a/src/app/pages/home/components/datos-generales/datos-generales.component.html
+++ b/src/app/pages/home/components/datos-generales/datos-generales.component.html
@@ -117,7 +117,7 @@
         <mat-form-field class="basis-2/3">
           <mat-label>Municipio</mat-label>
           <mat-select [(ngModel)]="municipio" formControlName="municipio" name="municipio"
-            (selectionChange)="online ? getCodigosPostales({municipio: $event.value}) : getCodigosPostalesOfline({municipio: $event.value})">
+            (selectionChange)="getCodigosPostales({municipio: $event.value})">
             <mat-option *ngFor="let municipio of municipios" [value]="municipio.municipio">
               {{ municipio.municipio }}
             </mat-option>
