Se agregan datos academicos al detalle del aspirante

--- a/src/app/pages/consulta/dialog-aspirante-beneficio.html
+++ b/src/app/pages/consulta/dialog-aspirante-beneficio.html
@@ -83,6 +83,18 @@
           <td class="py-2 px-4">{{ aspiranteBeneficio?.domicilio }}</td>
         </tr>
         <tr class="border-b">
+          <td class="py-2 px-4 font-semibold">Grado</td>
+          <td class="py-2 px-4">{{ aspiranteBeneficio?.grado }}</td>
+        </tr>
+        <tr class="border-b">
+          <td class="py-2 px-4 font-semibold">Tipo carrera</td>
+          <td class="py-2 px-4">{{ aspiranteBeneficio?.tipo_carrera }}</td>
+        </tr>
+        <tr class="border-b">
+          <td class="py-2 px-4 font-semibold">Carrera</td>
+          <td class="py-2 px-4">{{ aspiranteBeneficio?.carrera }}</td>
+        </tr>
+        <tr class="border-b">
           <td class="py-2 px-4 font-semibold">Observaciones</td>
           <td class="py-2 px-4">{{ aspiranteBeneficio?.com_obs || 'Sin observaciones' }}</td>
         </tr>
