--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -88,7 +88,7 @@
         Registrar
       </button>
       } @else{
-      <button (click)="onEdit()" [disabled]="!capturedImage"
+      <button (click)="onEdit()" 
         class="rounded-full w-3/4 flex flex-col items-center justify-center bg-rose-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
